added Lesson-07 and Lesson 0-8 directories and files

--- a/2-copy-of-code/lesson-03/website.html
+++ b/2-copy-of-code/lesson-03/website.html
@@ -1,11 +1,22 @@
-<p>
-  paragraph of text
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>First Website</title>
+  </head>
 
-<button>
-  Hello
-</button>
+  <body>
+    <p>
+      paragraph of text
+    </p>
+    
+    <button>
+      Hello
+    </button>
+    
+    <a href="https://www.youtube.com/" target="blank">
+      Link to YouTube
+    </a>    
+  </body>
 
-<a href="https://www.youtube.com/" target="blank">
-  Link to YouTube
-</a>
+</html>
+
