--- a/3-excercises/Lesson-02/buttons.html
+++ b/3-excercises/Lesson-02/buttons.html
@@ -1,56 +1,22 @@
-<style>
-  .subscribe-button {
-      background-color: rgb(200, 0, 0);
-      color: white;
-      border: none;
-      height: 3px;
-      width: 105px;
-      border-radius: 2px;
-      cursor: pointer;
-      box-shadow: none;  
-      margin-right: 8px;
-  }
-
-  .join-button {
-      background-color: white;
-      border-color: rgb(40, 120, 210);
-      border-style: solid;
-      border-width: 1px;
-      color: rgb(40, 120, 210);
-      height: 36px;
-      width: 62px;
-      border-radius: 2px;
-      margin-right: 8px;
-      cursor: pointer;
-  }
-
-  .tweet-button {
-    background-color: rgb(2, 135, 255);
-    color: white;
-    border: none;
-    height: 36px;
-    width: 74px;
-    border-radius: 18px;
-    font-weight: bold;
-    font-size: 15px;
-    cursor: pointer;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Buttons Practice</title>
+    <link rel="stylesheet" href="styles/buttons.css">
+  </head>
+  <body>
+    <button class="subscribe-button">
+      SUBSCRIBE
+    </button>
+    
+    <button class="join-button">
+      JOIN
+    </button>
+    
+    <button class="tweet-button">
+      Tweet
+    </button>
+  </body>
+</html>
 
 
-  button:hover {
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  }
-
-</style>
-
-<button class="subscribe-button">
-  SUBSCRIBE
-</button>
-
-<button class="join-button">
-  JOIN
-</button>
-
-<button class="tweet-button">
-  Tweet
-</button>
