--- a/3-excercises/Lesson-06/text.html
+++ b/3-excercises/Lesson-06/text.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <title>Text Practice</title>
-        <link rel="stylesheet" href="styles/text.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        
+         <link rel="stylesheet" href="styles/text.css">
     </head>
     <body>
         <p class="video-title">
