--- a/3-excercises/Lesson-07/7g.html
+++ b/3-excercises/Lesson-07/7g.html
@@ -1,11 +1,31 @@
 <style>
+    div {
+        border-width: 1px;
+        border-style: none;
+        box-sizing:border-box;
+        border-radius: 8px;
+        width: 370px;
+        height: 60px;
+        display: inline-block;
+        padding-left: 10px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 10px;
+        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.35);
+        transition: box-shadow 0.15s;
+    }
+
+    div:hover {
+        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+
+    }
+
     .wildcat {
-        width: 50px;
-        height: 50px;
-        border-radius: 25px;
-        object-fit: cover;
-        object-position: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
         vertical-align: middle;
+        padding-bottom: 0;
     }
 
     .text-box {
@@ -42,9 +62,12 @@
 
 </style>
 <body>
-    <img class="wildcat" src="thumbnails/african-wildcat.jpg">
-    <input type="text" class="text-box" placeholder="What's happening?">
-    <button class="tweet-button">
-      Tweet
-    </button>
+    <div>
+        <img class="wildcat" src="thumbnails/african-wildcat.jpg">
+        <input type="text" class="text-box" placeholder="What's happening?">
+        <button class="tweet-button">
+        Tweet
+        </button>
+    </div>
+    
   </body>
