--- a/3-excercises/Lesson-11/grid.html
+++ b/3-excercises/Lesson-11/grid.html
@@ -3,7 +3,7 @@
     <head>
         <title>Grid Practice</title>
     </head>
-    <body>
+    <body style="padding-bottom: 1000px;">
         <div style="
           display: grid;
           grid-template-columns: 100px 100px;
@@ -40,7 +40,21 @@
           <div style="background-color: lightblue;">100px</div>
           <div style="background-color: lightpink;">1fr</div>
           <div style="background-color: lightblue;">2fr</div>
+        </div>
 
+        <div style="
+          margin-top: 30px;
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          column-gap: 20px;
+          row-gap: 40px;
+           ">
+          <div style="background-color: lightblue; height: 200px;">1fr</div>
+          <div style="background-color: lightpink; height: 200px;">1fr</div>
+          <div style="background-color: lightblue; height: 200px;">1fr</div>
+          <div style="background-color: lightpink; height: 200px;">1fr</div>
+          <div style="background-color: lightblue; height: 200px;">1fr</div>
+          <div style="background-color: lightpink; height: 200px;">1fr</div>
         </div>
     </body>
 </html>
