--- a/3-excercises/Lesson-11/youtube.html
+++ b/3-excercises/Lesson-11/youtube.html
@@ -38,10 +38,13 @@
            margin-bottom: 12px;
          }
 
+         .video-info-grid {
+          display: grid;
+          grid-template-columns: 50px 1fr;
+         }
+
         .channel-picture {
-          display: inline-block;
-          width: 50px;
-          vertical-align: top;
+        
           background-color: gray;
         }
 
@@ -52,10 +55,7 @@
         }
 
         .video-info {
-          display: inline-block;
-          width: 245px;
-          vertical-align: top;
-          margin-top: 0;
+
           background-color: gray;
         }
 
@@ -82,7 +82,7 @@
         <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
         </div>
-        <div>
+        <div class="video-info-grid">
             <div class="channel-picture">
              <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
             </div>
@@ -104,7 +104,7 @@
           <div class="thumbnail-row">
               <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
           </div>
-            <div>
+            <div class="video-info-grid"> 
               <div class="channel-picture">
                <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
             </div>
