added Lesson-12 files

--- a/3-excercises/Lesson-12-flexbox/12a-d.html
+++ b/3-excercises/Lesson-12-flexbox/12a-d.html
@@ -28,20 +28,73 @@
                 width: 75px;
             ">75px</div>
         </div>
-
+        <p style="
+        margin-top: 10px;">
+            12b.
+        </p>
         <div class="hello" style="
-            margin-top: 30px;
+            margin-top: 15px;
             display: flex;
             flex-direction: row;
             ">
             <div style="
                 background-color: lightblue;
-                width: 200px;
-                ">200px</div>
+                width: 50px;
+                ">item1</div>
             <div style="
                 background-color: lightpink;
-                width: 75px;
-            ">75px</div>
+                flex: 1;
+            ">item2</div>
+            <div style="
+              background-color: lightblue;
+              width: 75px;
+              align-items: right;
+              ">item3</div>
+        </div>
+        <p style="margin-top: 10px;">
+          12c.
+        </p>
+        <div class="hello" style="
+            margin-top: 15px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            ">
+            <div style="
+                background-color: lightpink;
+                ">item1</div>
+            <div style="
+                background-color: lightpink;
+            ">item2</div>
+            <div style="
+              background-color: lightpink;
+              align-items: right;
+              ">item3</div>
+              <div style="
+              background-color: lightpink;
+              align-items: right;
+              ">item4</div>
+        </div>
+        <p>
+          12d.
+        </p>
+        <div class="hello" style="
+            margin-top: 15px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            border-style: solid;
+            border-width: 1px;
+            border-color: gray;
+            height: 50px;
+            align-items: center;
+            ">
+            <div style="
+                background-color: lightpink;
+                ">item1</div>
+            <div style="
+                background-color: lightpink;
+            ">item2</div>
         </div>
     </body>
 </html>
